# blog-fsf

./: Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt  robots.txt  sitemap.xml
blog/: admin.py  views.py
blog/migrations/: 0001_initial.py
contact/: admin.py  models.py  views.py
contact/migrations/: 0001_initial.py
contact/templates/contact/: contact.html  contact_success.html  faq.html
home/: urls.py  views.py
home/templates/home/: index.html  index22.html  options.html  project-boxes.html  project2-boxes.html  services.html  slider.html  vertical-portfolio.html
static/: style.css
static/css/: style.css
templates/: base.html  blog.html  index.html  post_detail.html
templates/includes/: main-nav.html  mobile-top-header.html
templates/includes/toast/: toast_success.html
todianedev/: asgi.py  settings.py  urls.py  wsgi.py
