[tool.poetry]
name = "\"blog-fsf\""
version = "\"0.1.0\""
description = "\"Website for diane corriette\""
authors = ["Diane Corriette <dcorriette@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
